# core

./: .clang-format  .clangd  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE
.github/workflows/: ci.yml  go.yml  spark.yml
core/: CMakeLists.txt
docs/core/: Type Traits.md
include/dywoq/core/__internal/: namespace.hxx
include/dywoq/cxx/: __config.hxx  core.hxx
include/dywoq/cxx/core/: type_traits.hxx
include/dywoq/cxx/core/constraints/: same.hxx  satisfied.hxx
include/dywoq/cxx/core/type_traits/: satisfied.hxx
lib/: CMakeLists.txt
lib/tests/: main.cxx
runtime/: CMakeLists.txt
runtime/tests/: main.cxx
src/lib/: placeholder.cxx
tests/: CMakeLists.txt
tests/core/type_traits/: satisfied.cxx
tests/spark/: go.mod
tools/spark/: go.mod  main.go
tools/spark/config/: config.go
tools/spark/test/: category.go  test.go
tools/spark/tests/: category.go  test.go
